--- a/src/App.css
+++ b/src/App.css
@@ -223,10 +223,7 @@ button:hover {
   }
 
   #about {
-    /* background-color: #a4508b;
-    background-image: linear-gradient(326deg, #a4508b 0%, #5f0a87 74%); */
-
-    height: 90vh;
+    height: auto;
   }
 
   .navbar-collapse {
