--- a/src/Pages/EventsList/EventsList.css
+++ b/src/Pages/EventsList/EventsList.css
@@ -10,6 +10,7 @@
 }
 .grid-container {
     max-width: 80vw !important;
+    min-height: 70vh;
     margin: auto;
     display: flex;
     justify-content: space-around;
