--- a/src/Pages/EventsList/Informal/CulturalDetails.css
+++ b/src/Pages/EventsList/Informal/CulturalDetails.css
@@ -137,6 +137,11 @@
 
     .scrollBox {
         order: 2;
+        height: auto !important;
+        width: 100% !important;
+    }
+    .ambaSection{
+        height: auto !important;
     }
 
     .imgBox {
