--- a/src/Atoms/funding/funding.css
+++ b/src/Atoms/funding/funding.css
@@ -1,4 +1,247 @@
-.funding {
-    background-color: red;
-    height: 100vh;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    background-color:darkblue;
+}
+:root{
+    --primary-text-color:white;
+    --secondary-text-color:white;
+    --accent-color:goldenrod;
+   
+    --padding-inline-section:20px;
+
+}
+body{
+    font-family: 'Poppins', sans-serif;
+    color: var(--primary-text-color);
+}
+h1 {
+    font-size: 3rem;
+    
+
+}
+h2{
+    font-size: 2rem;
+}
+h3{
+    font-size: 1.5rem;
+}
+p{
+    font-family: 'Poppins',sans-serif;
+    font-size: 1.25rem;
+    color: var(--secondary-text-color);
+    line-height: 1.8rem;
+
+}
+
+a{
+    text-decoration: none;
+    display: inline-block;
+
+}
+ul{
+    list-style:none;
+}
+.small-bold-text{
+    font-size: 1rem;
+    font-weight: 600;
+}
+.container{
+    max-width: auto;
+    margin-inline: auto;
+    padding-inline:var(--padding-inline-section) ;
+}
+.flex{
+    display: flex;
+    align-items: center;
+}
+.hover-link{
+    color: var(--primary-text-color);
+}
+.hover-link:hover{
+    color: var(--accent-color);
+    transition: 0.2s ease-out;
+}
+
+
+
+
+
+/* home page  */
+section1{
+    padding: 50px var(--padding-inline-section);
+
+}
+.header-section{
+    justify-content: center;
+    gap:50px;
+    margin-top: 150px;
+
+}
+.header-left{
+    max-width: 50vw;
+}
+.header-left h1{
+    margin-top: 20px;
+
+
+}
+.new{
+    color: gold;
+    
+}
+.topic {
+    color: gold;
+    display: flex;
+    justify-content: center;
+    margin-top: 30px;
+}
+/* .header-right img{
+    width: 100%;
+
+} */
+.header-right img{
+    width: 100%;
+    height: 45vh;
+    border-radius: 15px;
+    border: 2px solid gold;
+    
+    
+    
+}
+.header-right img:hover{
+    transform: scale(1.1);
+    
+    
+}
+
+
+/* text animation
+.header-section h1{
+position: relative;
+font: 14vw;
+color: #252839;
+-webkit-text-stroke: 0.3vw #383d52;
+text-transform: uppercase;
+
+}
+.header-section h1::before{
+    content: attr(data-text);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    color: goldenrod;
+    -webkit-text-stroke: 0vw #383d52;
+    border-right: 2px solid #edfe01;
+    overflow: hidden;
+    animation: animate 6s linear infinite ;
+
+}
+@keyframes animate{
+    0%,10%,100%{
+        width: 0;
+    }
+    70%,90%{
+        width: 50%;
+
+    }
+} */
+
+.header-section h1{
+    color: gold;
+}
+
+
+.social-icons{
+    margin-top: 30px;
+
+}
+.social-icons a{
+    text-decoration: none;
+    font-size: 30px;
+    margin-right: 15px;
+    color: grey;
+    display: inline-block;
+    transition: transform 0.5s;
+}
+.social-icons a:hover{
+    color: yellow;
+    transform: translateY(-5px);
+}
+
+#snew{
+    margin-top: 80px;
+}
+
+
+
+/* Responsive */
+@media screen and (max-width:991px){
+    h3{
+        font-size: 1.2rem;
+    }
+     h1{
+        color: goldenrod;
+    }
+    
+    .about-img img{
+        width: 100%;
+        
+       
+        border-radius: 15px;
+        
+        
+    }
+    .container1{
+        justify-content: center;
+    }
+
+  
+
+
+}
+
+@media  screen and (max-width:767px){
+    
+    .new h1{
+        color: goldenrod;
+    }
+    .header-right img{
+        height: 30vh;
+    }
+    
+    .header-section{
+        flex-direction: column-reverse;
+    }
+    .header-left{
+        max-width: 100vw;
+        text-align: center;
+    }
+   
+
+}
+@media screen  and (max-width: 479px) {
+    :root{
+        -padding-inline-section:10px;
+    }
+    .new h1{
+        font-size: 2rem;
+        color: gold;
+    
+    }
+    h2{
+        font-size: 1.5rem;
+    }
+    h3{
+        font-size: 1.2rem;
+    }
+    p{
+        font-size: 1rem;
+    }
+   
+
+
 }
