--- a/src/Atoms/funding/funding.css
+++ b/src/Atoms/funding/funding.css
@@ -1,4 +1,4 @@
-*{
+/* *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -68,7 +68,6 @@ ul{
 
 
 
-/* home page  */
 section1{
     padding: 50px var(--padding-inline-section);
 
@@ -97,10 +96,7 @@ section1{
     justify-content: center;
     margin-top: 30px;
 }
-/* .header-right img{
-    width: 100%;
 
-} */
 .header-right img{
     width: 100%;
     height: 45vh;
@@ -117,38 +113,6 @@ section1{
 }
 
 
-/* text animation
-.header-section h1{
-position: relative;
-font: 14vw;
-color: #252839;
--webkit-text-stroke: 0.3vw #383d52;
-text-transform: uppercase;
-
-}
-.header-section h1::before{
-    content: attr(data-text);
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 0;
-    height: 100%;
-    color: goldenrod;
-    -webkit-text-stroke: 0vw #383d52;
-    border-right: 2px solid #edfe01;
-    overflow: hidden;
-    animation: animate 6s linear infinite ;
-
-}
-@keyframes animate{
-    0%,10%,100%{
-        width: 0;
-    }
-    70%,90%{
-        width: 50%;
-
-    }
-} */
 
 .header-section h1{
     color: gold;
@@ -178,7 +142,6 @@ text-transform: uppercase;
 
 
 
-/* Responsive */
 @media screen and (max-width:991px){
     h3{
         font-size: 1.2rem;
@@ -244,4 +207,4 @@ text-transform: uppercase;
    
 
 
-}
+} */
