--- a/src/Atoms/funding/funding.css
+++ b/src/Atoms/funding/funding.css
@@ -47,10 +47,11 @@
 
 
 
-.section1{
+/* .section1{
     padding: 50px var(--padding-inline-section);
 
-}
+} */
+
 .header-section{
     justify-content: center;
     gap:50px;
@@ -60,9 +61,11 @@
 .header-left{
     max-width: 50vw;
 }
+
 .header-left h1{
     margin-top: 20px;
     color: yellow;
+
 
 
 }
@@ -88,7 +91,9 @@
     
     
 }
-.header-right img:hover{
+
+
+.header-right1 img:hover{
     transform: scale(1.1);
     transition: ease-in-out 0.5s;
 }
@@ -125,7 +130,13 @@
 
 #snew{
     padding-top: 80px;
-    background-color: darkblue;
+    background-color: rgb(29, 29, 147);
+    /* background-image: url("fundimg/istockphoto-1404239848-612x612.jpg") ; */
+    /* background-repeat: repeat; */
+    /* background-size:cover; */
+    /* background-position: center;
+    background-repeat: no-repeat;  */
+    
     font-family: 'Poppins', sans-serif;
 }
 
