--- a/src/Pages/SA/Special.css
+++ b/src/Pages/SA/Special.css
@@ -15,3 +15,20 @@
 .sa-container img{
     width: 100%;
 }
+
+@media screen and (max-width:768px) {
+    .sa-container{
+        flex-direction: column;
+    }
+    .sa-container div{
+        width: 100%;
+        margin: 20px auto;
+    }
+    .sa-container div h1{
+        font-size: 40px;
+    }
+    .sa-container div p{
+        width: 100% !important;
+        margin: auto;
+    }
+}   
