--- a/src/Pages/Schedule/Schedule.css
+++ b/src/Pages/Schedule/Schedule.css
@@ -36,7 +36,7 @@ body{
 
 .selected{
     border-bottom: 2px solid white;
-    
+    border-radius: 5px;
 }
 
 /* Section Css */
@@ -57,8 +57,8 @@ body{
 
 .schedule-events{
     width: 70%;
+    height: 70vh;
     display: flex;
-    justify-content: center;
     padding: 20px 0px;
     flex-wrap: wrap;
 }
